Added support for Services Search.

--- a/Drupal7.Services/Drupal7.Services.csproj
+++ b/Drupal7.Services/Drupal7.Services.csproj
@@ -56,6 +56,12 @@
     <Compile Include="DrupalServicesNode.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrupalServicesSearchNode.cs">
+      <DependentUpon>DrupalServices.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DrupalServicesSearchUser.cs">
+      <DependentUpon>DrupalServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrupalServicesSystem.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
