--- a/Drupal7.Services/Drupal7.Services.nuspec
+++ b/Drupal7.Services/Drupal7.Services.nuspec
@@ -11,6 +11,7 @@
     <projectUrl>https://github.com/titobrasolin/Drupal7.Services</projectUrl>
     <licenseUrl>https://raw.githubusercontent.com/titobrasolin/Drupal7.Services/master/LICENSE</licenseUrl>
     <iconUrl>https://www.drupal.org/files/druplicon.small_.png</iconUrl>
+	<tags>Drupal</tags>
   </metadata>
   <files />
 </package>
