--- a/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
+++ b/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
@@ -38,6 +38,9 @@
     <Compile Include="DrupalServicesComment.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrupalServicesContact.cs">
+      <DependentUpon>DrupalServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrupalServicesDefinition.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
