--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ UpgradeLog*.htm
 FakesAssemblies/
 
 *.userprefs
+Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.sln
