--- a/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
+++ b/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
@@ -44,6 +44,9 @@
     <Compile Include="DrupalServicesDefinition.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrupalServicesEntityComment.cs">
+      <DependentUpon>DrupalServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrupalServicesFile.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
