--- a/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
+++ b/Drupal7.Services/Drupal7.Services.CreateNewNuGetPackageFromProjectAfterEachBuild.csproj
@@ -47,6 +47,9 @@
     <Compile Include="DrupalServicesEntityComment.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
+    <Compile Include="DrupalServicesEntityFile.cs">
+      <DependentUpon>DrupalServices.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrupalServicesFile.cs">
       <DependentUpon>DrupalServices.cs</DependentUpon>
     </Compile>
